# OP_repo

./: .gitignore  .gitmodules
Turing/: rules.txt  turing_m.c
courses/lessons/05_12/: List.c  List.c.old
courses/lessons/28_11/: User.c  User.h  main.c
courses/lessons/l21_11/: main.c  mg.c  test8
courses/lessons/lesson1/: main.c  w.c
courses/lessons/lesson2/: z2.c
courses/lessons/lesson3/: main.c  main1.c  main2.c  main5.c
courses/lessons/lesson_07_11/: m1.c
courses/lessons/lesson_14_11/: main.c
courses/lessons/lesson_23_10/: main.c
courses/lessons/sm1/l21_11/: test3  test4  test7
courses/lessons/sm1/lesson1/: main.c  w.c
courses/lessons/sm1/lesson2/: z1.c
courses/lessons/sm1/lesson3/: main2.c
courses/lessons/sm1/lesson_07_11/: m1.c
courses/lessons/sm1/lesson_23_10/: main.c
courses/lessons/sm2/05_03/: main.c  mj.c  shared.c  shared.h
courses/lessons/sm2/27_03/: CMakeLists.txt  main.c  other.c  other.h  p.c  struct.c  struct.h  test.c
courses/lessons/sm2/bench/: arrs.c
courses/prog_base/labs/lab1/: condition.c  config.h  math.c  switch.c  test.c
courses/prog_base/labs/lab2/: arrays.c  arrays.h  automata.c  automata.h  config.h  loops.c  loops.h  main.c
courses/prog_base/labs/lab3/: CMakeLists.txt  commands.c  commands.h  main.c  util.h
courses/prog_base/labs/lab4/: CMakeLists.txt  DBQueries.h  DBStructs.h  DBUtil.c  DBUtil.h  main.c
courses/prog_base/labs/lab4/sql/: createTables.sql
courses/prog_base/labs/lab4/sqlite3/: CMakeLists.txt
courses/prog_base/labs/lab4/src/: DBQueries.c  DBQueries.h  DBStructs.h  DBUtil.c  DBUtil.h  main.c
courses/prog_base/labs/lab4_redone/: CMakeLists.txt
courses/prog_base/labs/lab4_redone/sql/: createTables.sql  create_system_records.sql
courses/prog_base/labs/lab4_redone/src/: DBQueries.c  DBQueries.h  DBUtil.c  DBUtil.h  Loop.c  Loop.h  QueryingUtil.h  Views.c  Views.h  main.c  types.h
courses/prog_base/tasks/bmp_console/: CMakeLists.txt  main.c
courses/prog_base/tasks/bmp_console/ImgLib/: CMakeLists.txt  IL_BMP.c  ImgLib.c
courses/prog_base/tasks/bmp_console/ImgLib/include/: ImgLib.h
courses/prog_base/tasks/bmp_console/ImgLib/include/ImgLib/: IL_BMP.h  ImgLib.h
courses/prog_base/tasks/console/: CMakeLists.txt  main.c
courses/prog_base/tasks/console_graph/: CMakeLists.txt  main.c
courses/prog_base/tasks/data_repr/: values.txt
courses/prog_base/tasks/dyn_mem/: main.c
courses/prog_base/tasks/files/: files.c
courses/prog_base/tasks/hello_world/: hello  hello.c
courses/prog_base/tasks/long2double/: repr.c  repr.h  test.c
courses/prog_base/tasks/machines/: program.tur
courses/prog_base/tasks/markov_algo/: program.ma
courses/prog_base/tasks/matrix_simple/: test.c  trans.c  trans.h
courses/prog_base/tasks/message_coding/: huffman.py
courses/prog_base/tasks/morse_encode/: encode.c
courses/prog_base/tasks/numeral_systems/: results.txt
courses/prog_base/tasks/numeral_systems_conversion/: ns_conversion.c  ns_conversion.c.orig
courses/prog_base/tasks/recursion/: main.c
courses/prog_base/tasks/string_simple/: main.c  proc.c  proc.h
courses/prog_base/tasks/struct/: main.c
courses/prog_base_2/labs/lab1/: main.c  tests.c  univ_person.c  univ_person.h  univ_person_tests.c  univ_term.c  univ_term.h  univ_term_tests.c  univsec_wicket.c  univsec_wicket.h  univsec_wicket_tests.c
courses/prog_base_2/labs/lab2/: Makefile  Weather.h  WeatherQueue.c  WeatherQueue.h  c.h  c1.c  main.c
courses/prog_base_2/labs/lab3/: CMakeLists.txt  am_observer.c  am_observer.h  am_queue.c  am_queue.h  am_queue_tests.c  main.c  tests.c
courses/prog_base_2/labs/lab4/: .gitignore  Driver.hs  HttpHelpers.hs  main  main.hi  main.hs  main_nw.hs  suka  suka.hi  suka.hs
courses/prog_base_2/lessons/23_04/: app.c
courses/prog_base_2/tasks/async_chat/: main.c
courses/prog_base_2/tasks/callbacks/: main.c
courses/prog_base_2/tasks/client/: main.c
courses/prog_base_2/tasks/data_formats/: CMakeLists.txt  taxi_drivers.csv  taxi_drivers.json  taxi_drivers.xml
courses/prog_base_2/tasks/data_formats/src/: Driver.c  Driver.h  main.c
courses/prog_base_2/tasks/database/: CMakeLists.txt
courses/prog_base_2/tasks/database/sql/: create_database.sql  fill_database.sql
courses/prog_base_2/tasks/database/sqlite3/: CMakeLists.txt
courses/prog_base_2/tasks/database/src/: DBUtil.c  DBUtil.h  Driver.c  Driver.h  QueryingUtil.h  main.c
courses/prog_base_2/tasks/module/: CMakeLists.txt
courses/prog_base_2/tasks/server/: httprequest.c  httprequest.h  main.c  server.c
courses/prog_base_2/tasks/threads/: Printer.c  Printer.h  main.c
courses/prog_base_2/tasks/traversal/: CMakeLists.txt
courses/prog_base_2/tasks/traversal/src/: main.c
courses/prog_base_2/tasks/unit_tests/: DoubleArray.c  DoubleArray.h  testDoubleArray.c
courses/prog_base_3/project/Synthesizer/: CMakeLists.txt
courses/prog_base_3/project/Synthesizer/src/: ADSR.h  SimpleWaves.c  SimpleWaves.h  WaveGenerator.h  application.cpp  application.h  atm_observer.h  audio_utils.c  audio_utils.h  audiogenerator.cpp  audiogenerator.h  functionalspinlock.h  instrumentinput.h  instrumentinputdevice.h  keyboardinstrumentinput.cpp  keyboardinstrumentinput.h  main.c  main.cpp  old_main.c
courses/prog_base_3/project/midis/: skyrim.mid  spt.mid  vedmak.mid  zbt.mid
courses/prog_base_3/project/qSynth/: constants.h  distortion.cpp  distortion.h  effectsequence.cpp  effectsequence.h  effecttreeitem.cpp  effecttreeitem.h  effecttreemodel.cpp  effecttreemodel.h  generator.cpp  generator.h  genericinputaction.h  guitarcreator.cpp  guitarcreator.h  guitargenerator.cpp  guitargenerator.h  guitarinputprocessor.cpp  guitarinputprocessor.h  (+54 more)
labs/lab1/: math.c  switch.c
lessons/lesson4/: switch.c
opi/HashTable/: pom.xml
opi/lab5_arm/: functions.h  impl.s  main.c
opi/lab7/: pom.xml
opi/lab_5/: Makefile  impl.c  impl.h  main.c
opi/lab_6/: arrays.c  arrays.h  main.c
opi/lessons/Nov27/: main.c
self/: switch.c
self/antip/: Notifier.py
self/cppwtf/: cb.cxx
self/linal/: M2.cxx  main.cxx
sr3/: Stack.c  Stack.h  main.c
test/: main.c
(+46 files in other folders)
